worked on templates
